kube_apps/grafana_loki/deploy-loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: tig
  labels:
    app: loki
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "latest"
    spec:
      securityContext:
        runAsUser: 977
        runAsGroup: 988
        runAsNonRoot: true
        fsGroup: 988
        supplementalGroups: [ 0 ]
      containers:
        - name: loki
          securityContext:
            runAsUser: 977
          image: grafana/loki:3.7.6
          imagePullPolicy: "IfNotPresent"
          args: ["-config.file", "/mnt/config/loki-config.yml"]
          resources:
            limits:
              memory: "800Mi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-conf
              mountPath: /mnt/config/loki-config.yml
              subPath: loki-config.yml
            - name: storage
              mountPath: /data
      volumes:
        - name: loki-conf
          configMap:
            name: loki-config
        - name: storage
          persistentVolumeClaim:
            claimName: pvc-loki-unifi
      dnsPolicy: ClusterFirst
      serviceAccountName: loki-serviceaccount
      restartPolicy: Always
