kube_apps/grafana_loki/deploy-promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
  namespace: tig
  labels:
    app: promtail
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
      annotations:
        diun.enable: "true"
        diun.watch_repo: "true"
        diun.include_tags: "2.9.*;latest"
    spec:
      serviceAccount: promtail-serviceaccount
      serviceAccountName: promtail-serviceaccount
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: promtail-container
          image: grafana/promtail:2.9.3
          args: ["-config.file", "/etc/promtail/config.yml"]
          ports:
            - name: http-metrics
              containerPort: 3201
              protocol: TCP
          volumeMounts:
            - name: promtail-conf
              mountPath: /etc/promtail/config.yml
              subPath: config.yml
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
      volumes:
        - name: promtail-conf
          configMap:
            name: promtail-config
        - name: pods
          hostPath:
            path: /var/log/pods
