kube_apps/grafana_loki/svc-promtail.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-promtail
  namespace: promtail
spec:
  selector:
    app: loki
  type: ClusterIp
  ClusterIP: None
  ports:
    - protocol: TCP
      port: 3200
