kube_apps/grafana_loki/ingress-loki.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: tig
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: loki.houseofus.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-loki
              port:
                number: 3100
